# NewEngine

./: CMakeLists.txt  TODO.md
include/: Interface.hpp  console.hpp  graphic_pipeline.hpp  object.hpp  render_batch.hpp  render_queue.hpp  resource_manager.hpp  util.hpp  vulkan_context.hpp
shaders/src/: simple.frag  simple.vert
src/: Interface.cpp  console.cpp  graphic_pipeline.cpp  main.cpp  object.cpp  render_batch.cpp  render_queue.cpp  resource_manager.cpp  util.cpp  vulkan_context.cpp
src/imgui/: imgui_impl_vulkan.cpp
